--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ main{
     font-size: 15px;
     box-shadow: 1px 1px 3px 2px #f8f8f8;
     color: #000000;
+    text-align: center;
     font-family: 'Inter';
     font-weight: 500;
     transition: 0.3s linear;
