--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 *{
     box-sizing: border-box;
 }
-
-@media (max-width:950px){
+@media (max-width:412px){
     main{
         display: flex;
         align-items: flex-start;
@@ -52,6 +51,10 @@ body{
 }
 main{
     display: flex;
+    justify-content: center;
+}
+.container{
+    display: inline-flex;
     align-items: flex-start;
     justify-content: center;
 }
@@ -109,6 +112,7 @@ main{
     border-radius: 5px;
     color: #ffffff;
     margin-top: 20px;
+    cursor: pointer;
 } 
 
 .save_btn:focus{
@@ -118,22 +122,73 @@ main{
 
 .sidebar_title{
     text-align: center;
-    width: 100%;
+    width: 95%;
     padding-bottom: 10px;
     border-bottom: 1px solid #b4b4b4;
 }
+.search{
+    width: 95%;
+    height: 35px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    /* border: 1px solid #525252; */
+    box-shadow: 0px 0px 15px 2px #f1f1f1;
+}
+.search:focus{
+    outline: none;
+}
+.search:placeholder-shown{
+    font-family: 'Cousine';
+}
+/* ::-webkit-scrollbar {
+    width: 10px; 
+    height: 5px; 
+    background-color: #0077ff;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #f3f3f3;
+    border-radius: 9em;
+    box-shadow: inset 1px 1px 10px #f3faf7;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #ffffff;
+    box-shadow: none;
+} */
+
 .sidebar{
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: auto;
+    max-height: 550px;
+    overflow-Y: auto;
     background-color: #fff;
     box-shadow: 0px 0px 15px 2px #f1f1f1;
     border-radius: 15px;
     padding: 0px 10px;
+    margin-bottom: 20px;
+}
+.delete_all_button{
+    width: 40%;
+    color: #ffffff;
+    text-align: center;
+    font-family: 'Balsamiq Sans';
+    background-color: #ff4b4b;
+    border:none;
+    border-radius: 6px;
+    padding: 10px;
+    cursor: pointer;
+    transition: 0.1s ease-in;
+}
+.delete_all_button:focus{
+    outline: none;
+    box-shadow: 1px 1px 6px #f72828;
 }
 .note_title_block{
     text-align: center;
-    font-weight: 800;
 }
 .note_block{
     width: 95%;
@@ -145,13 +200,13 @@ main{
     font-size: 15px;
     box-shadow: 1px 1px 3px 2px #f8f8f8;
     color: #000000;
-    text-align: center;
     font-family: 'Inter';
+    line-height: 25px;
     font-weight: 500;
     transition: 0.3s linear;
 }
 .note_block:hover{
-    box-shadow: 1px 1px 8px 5px #f0f0f0;
+    box-shadow: 1px 1px 15px 5px #f1f1f1;
 }
 .no_note{
     display: flex;
