--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,27 @@
 *{
     box-sizing: border-box;
 }
-@media (max-width:412px){
-    main{
+body{
+    max-width: 1920px;
+    min-width: 1140px;
+}
+@media (max-width:500px){
+    body{
+        min-width: 490px;
+        max-width: 501px;
+    }
+    .container{
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         flex-direction: column;
         justify-content: center;
         padding-left: 50px;
         padding-right: 50px;
     }
-    .text-editor{
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 50px;
+    .saved-notes{
+        margin-top: 50px;
     }
-    .text-editor{
-        display: flex;
-        flex-direction: column;
-    }
-    .textarea{
-        width: 500px;
-        height: 250px;
-        padding: 20px;
-        margin: 0 auto;
-        box-shadow: 0px 0px 15px 2px #f1f1f1;
-        border-radius: 15px;
-        border:none;
-    }
+    
 }
 body{
     font-family: 'Balsamiq Sans';
